--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 # pyproject.toml
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "pysnowclim"
@@ -12,16 +12,22 @@ authors = [{ name = "Abby"}, { name = "Aranildo"}, { name = "Raj"}]
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-    "numpy",
-    "xarray",
-    "scipy",
-    "netCDF4",
-    "pandas",
-    "requests",
+    "numpy>=1.19.0",
+    "xarray>=0.18.0",
+    "scipy>=1.6.0",
+    "netCDF4>=1.5.0",
+    "pandas>=1.2.0",
+    "requests>=2.25.0",
+    "matplotlib>=3.3.0",
 ]
 
 [project.optional-dependencies]
-dev = ["pytest", "black", "mypy"]
+dev = [
+    "pytest>=6.0",
+    "black>=21.0",
+    "mypy>=0.900",
+    "pytest-cov>=2.12.0",
+]
 
 [tool.pytest.ini_options]
 # Specifies the directory where tests are located
@@ -31,3 +37,8 @@ testpaths = "tests"
 [tool.black]
 line-length = 88
 target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
+
+[project.urls]
+Homepage = "https://github.com/abbylute/pySnowClim"
+Repository = "https://github.com/abbylute/pySnowClim"
+Issues = "https://github.com/abbylute/pySnowClim/issues"
