--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,52 +1,38 @@
 name: Build and Deploy Documentation
 
 on:
-
   push:
-
+    branches: [ main ]
+  pull_request:
     branches: [ main ]
 
 jobs:
-
   docs:
-
     runs-on: ubuntu-latest
-
+    
     steps:
-
-    - uses: actions/checkout@v3
-
+    - uses: actions/checkout@v4
+    
     - name: Setup Python
-
-      uses: actions/setup-python@v3
-
+      uses: actions/setup-python@v4
       with:
-
         python-version: '3.9'
-
+    
     - name: Install dependencies
-
       run: |
-
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install sphinx sphinx-rtd-theme
-
         pip install -e .
-
+    
     - name: Build docs
-
       run: |
-
         cd docs
-
         make html
-
+    
     - name: Deploy to GitHub Pages
-
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       uses: peaceiris/actions-gh-pages@v3
-
       with:
-
         github_token: ${{ secrets.GITHUB_TOKEN }}
-
         publish_dir: ./docs/_build/html
-
