--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,36 +3,57 @@ name: Build and Deploy Documentation
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  docs:
+  build:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
     
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
     
-    - name: Install dependencies
+    - name: Install documentation dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
         pip install sphinx sphinx-rtd-theme
-        pip install -e .
+        # Install minimal dependencies needed for imports
+        pip install numpy
     
-    - name: Build docs
+    - name: Setup Pages
+      uses: actions/configure-pages@v3
+    
+    - name: Build documentation
       run: |
         cd docs
+        make clean
         make html
     
-    - name: Deploy to GitHub Pages
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      uses: peaceiris/actions-gh-pages@v3
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v2
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/_build/html
+        path: ./docs/_build/html
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v2
