--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,8 +4,17 @@ on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
-  docs:
+  build:
     runs-on: ubuntu-latest
     
     steps:
@@ -14,8 +23,6 @@ jobs:
     
     - name: Setup Python
       uses: actions/setup-python@v5
-      with:
-        python-version: '3.9'
     
     - name: Install documentation dependencies
       run: |
@@ -23,15 +30,27 @@ jobs:
         pip install sphinx sphinx-rtd-theme
         pip install numpy
     
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+    
     - name: Build documentation
       run: |
         cd docs
         make clean
         make html
     
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/_build/html
-        force_orphan: true
+        path: ./docs/_build/html
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
